--- a/vhost.conf
+++ b/vhost.conf
@@ -2,7 +2,7 @@ server {
     listen      80;
     server_name localhost;
     root        /var/www/web;
-    index       index.php;
+    index       index.php index.html;
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
